# rocket-upload

./: Cargo.toml  README.md  Rocket.toml  data-sample.txt
src/: main.rs
static/: index.html
